--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dive Store</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Diva Store</title>
+  <meta name="description" content="Discover the latest releases at the best prices, shop now and enjoy special discounts.">
+  <meta name="keywords" content="diving, Diva store, scuba gear, snorkel, underwater equipment">
+  <meta name="author" content="Diva Store">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Diva Store - Best Shopping Experience">
+  <meta property="og:description" content="Discover the latest releases at the best prices, shop now and enjoy special discounts.">
+  <meta property="og:image" content="https://divastore.com/preview-image.jpg">
+  <meta property="og:url" content="https://divastore.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Diva Store">
+  <meta name="twitter:description" content="Your best source for shopping experience.">
+  <meta name="twitter:image" content="https://divastore.com/preview-image.jpg">
+
+  <meta name="theme-color" content="#0073e6">
+  <link rel="icon" type="image/svg+xml" href="/diva-store-logo.jpg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
