--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Diva Store - Best Shopping Experience">
   <meta property="og:description" content="Discover the latest releases at the best prices, shop now and enjoy special discounts.">
-  <meta property="og:image" content="https://divastore.com/preview-image.jpg">
-  <meta property="og:url" content="https://divastore.com">
+  <meta property="og:image" content="https://divastoree.com/preview-image.jpg">
+  <meta property="og:url" content="https://divastoree.com">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Diva Store">
   <meta name="twitter:description" content="Your best source for shopping experience.">
-  <meta name="twitter:image" content="https://divastore.com/preview-image.jpg">
+  <meta name="twitter:image" content="https://divastoree.com/preview-image.jpg">
 
   <meta name="theme-color" content="#0073e6">
-  <link rel="icon" type="image/svg+xml" href="/diva-store-logo.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/diva-store-logo.png" />
 </head>
 
 <body>
