updates and fixes

--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Diva Store</title>
-  <meta name="description" content="Discover the latest releases at the best prices, shop now and enjoy special discounts.">
-  <meta name="keywords" content="diving, Diva store, scuba gear, snorkel, underwater equipment">
-  <meta name="author" content="Diva Store">
-  <meta name="robots" content="index, follow">
+  <!-- <link rel="preload" as="image" href="src/assets/images/diva-store-01.webp" type="image/webp">
+  <link rel="preload" as="image" href="src/assets/images/diva-store-02.webp" type="image/webp">
+  <link rel="preload" as="image" href="src/assets/images/diva-store-03.webp" type="image/webp">
+  <link rel="preload" as="font" href="public/fonts/Rubik-Regular.ttf" type="font/woff2" crossorigin="anonymous"> -->
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Diva Store - Best Shopping Experience">
-  <meta property="og:description" content="Discover the latest releases at the best prices, shop now and enjoy special discounts.">
-  <meta property="og:image" content="https://divastoree.com/preview-image.jpg">
-  <meta property="og:url" content="https://divastoree.com">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Diva Store">
-  <meta name="twitter:description" content="Your best source for shopping experience.">
-  <meta name="twitter:image" content="https://divastoree.com/preview-image.jpg">
+  <link rel="preconnect" href="https://divastoree.com" crossorigin="anonymous">
 
   <meta name="theme-color" content="#0073e6">
   <link rel="icon" type="image/svg+xml" href="/diva-store-logo.png" />
