--- a/index.html
+++ b/index.html
@@ -5,18 +5,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- <link rel="preload" as="image" href="src/assets/images/diva-store-01.webp" type="image/webp">
-  <link rel="preload" as="image" href="src/assets/images/diva-store-02.webp" type="image/webp">
-  <link rel="preload" as="image" href="src/assets/images/diva-store-03.webp" type="image/webp">
-  <link rel="preload" as="font" href="public/fonts/Rubik-Regular.ttf" type="font/woff2" crossorigin="anonymous"> -->
-
   <link rel="preconnect" href="https://divastoree.com" crossorigin="anonymous">
 
   <meta name="theme-color" content="#0073e6">
   <link rel="icon" type="image/svg+xml" href="/diva-store-logo.png" />
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '9330961527000906');
+    fbq('track', 'PageView');
+  </script>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=9330961527000906&ev=PageView&noscript=1" /></noscript>
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
